--- a/index.html
+++ b/index.html
@@ -144,20 +144,28 @@
           </div>
           <div class="row justify-content-center ">
             <div class="col-md-6">
-              <form>
+              <div class="alert alert-success alert-dismissible fade show d-none my-alert" role="alert">
+                <strong>Terimakasih!</strong> pesan anda telah kami terima.
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+              </div>
+              <form name="contact-form">
                 <div class="mb-3">
                   <label for="name" class="form-label">nama lengkap</label>
-                  <input type="text" class="form-control" id="name" aria-describedby="name">
+                  <input type="text" class="form-control" id="name" aria-describedby="name" name="nama">
                 </div>
                 <div class="mb-3">
                   <label for="email " class="form-label">email </label>
-                  <input type="email" class="form-control" id="email1" aria-describedby="email">
+                  <input type="email" class="form-control" id="email1" aria-describedby="email" name="email">
                 </div>
                 <div class="mb-3">
                   <label for="pesan" class="form-label">pesan</label>
-                  <textarea class="form-control" id="pesan" rows="3"></textarea>
+                  <textarea class="form-control" id="pesan" rows="3" name="pesan"></textarea>
                 </div>
-                <button type="submit" class="btn btn-primary">kirim</button>
+                <button type="submit" class="btn btn-primary btn-kirim">kirim</button>
+                <button class="btn btn-primary btn-loading d-none" type="button" disabled>
+                  <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+                  Loading...
+                </button>
               </form>
             </div>
           </div>
@@ -176,5 +184,33 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <script src="main.js"></script>
+
+    <script>
+      const scriptURL = 'https://script.google.com/macros/s/AKfycbwxXJ0Bht7oUje7NypvV95_mI0VicV28Lnhu9COB21r8wXf7emPSCvgxly0X3H-Amh5/exec'
+      const form = document.forms['contact-form']
+      const btnKirim = document.querySelector('.btn-kirim');
+      const btnLoading = document.querySelector('.btn-loading');
+      const myAlert = document.querySelector('.my-alert');
+      
+      form.addEventListener('submit', e => {
+        e.preventDefault()
+        // ketika tombol sumbit diklik 
+        //tampilkan tombol loading, hilangkan tombol kirim
+        btnLoading.classList.toggle('d-none');
+        btnKirim.classList.toggle('d-none');
+        fetch(scriptURL, { method: 'POST', body: new FormData(form)})
+          .then(response => {
+             //tampilkan tombo kirim,  hilangkan tombol loading
+             btnLoading.classList.toggle('d-none');
+             btnKirim.classList.toggle('d-none');
+             // tampilkan alert
+             myAlert.classList.toggle('d-none');
+             // reset form
+             form.reset();
+            console.log('Success!', response)})
+          .catch(error => console.error('Error!', error.message))
+      })
+    </script>
   </body>
 </html>
+
